fixing bugs with no initial background, board too small

--- a/src/client/css/puzzles/xyflyer.less
+++ b/src/client/css/puzzles/xyflyer.less
@@ -35,9 +35,8 @@ body {
     
         .board {
             width: @width - @equations_width;
-            height: @width - @equations_width;
+            height: @height;
             float: left;
-            margin-top: (@height - (@width - @equations_width)) / 2;
             position: relative;   
         
             canvas {
